bff/web-bff/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-bff
  labels:
    app: web-bff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-bff
  template:
    metadata:
      labels:
        app: web-bff
    spec:
      containers:
      - name: web-bff
        image: us-central1-docker.pkg.dev/proyecto-final-2-455301/apis-images/web-bff:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
