bff/web-bff/k8s/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: web-bff-service
spec:
  selector:
    app: web-bff
  ports:
  - port: 80
    targetPort: 5000
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-bff-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-bff-service
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: new-cert
spec:
  rules:
    - host: 34.110.164.125.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-bff-service
                port:
                  number: 80
